--- a/src/components/Task.css
+++ b/src/components/Task.css
@@ -9,7 +9,8 @@
     text-align: center;
     max-height: 55%;
     white-space: nowrap;
-    overflow: hidden;
+    overflow: scroll;
+    scrollbar-width: none;
 }   
 
 .ind-task-button {
